--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.96",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "json-server": "^1.0.0-alpha.23",
     "mini.css": "3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
